코드트리 비오는 날 내 풀이

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.autoGuessEncoding": true,
+    "C_Cpp.autoAddFileAssociations": false,
     "files.associations": {
         "algorithm": "cpp"
     }
